<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Project Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="heading_text">My Nanodegree Apps!</string>

    <string name="button_text_1">Spotify Streamer</string>
    <string name="button_text_2">Scores App</string>
    <string name="button_text_3">Library App</string>
    <string name="button_text_4">Build It Bigger</string>
    <string name="button_text_5">XYZ Reader</string>
    <string name="button_text_6">Capstone: My Own App</string>
</resources>
