<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical" tools:context=".MainActivity">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/heading_text"
            android:textSize="@dimen/heading_text_size"
            android:gravity="center" />

        <Button android:id="@+id/button_1"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_text_1"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <Button android:id="@+id/button_2"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_text_2"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <Button android:id="@+id/button_3"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_text_3"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <Button android:id="@+id/button_4"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_text_4"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <Button android:id="@+id/button_5"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_text_5"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <Button android:id="@+id/button_6"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_text_6"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

    </LinearLayout>
</ScrollView>